--- a/EmpInfo/Views/Apply/BeginApplySA.cshtml
+++ b/EmpInfo/Views/Apply/BeginApplySA.cshtml
@@ -184,13 +184,13 @@
                 <h4 class="text-danger"><i class="fa fa-info-circle"></i> 功能说明 </h4>
                 <div style="margin-left:18px;padding-top:6px;" class="text-danger">
                     <p>
-                        1. 申请流程步骤：申请人提交申请--->对应仓库审核人审批--->K3管理员（赖吉全）审批--->系统授权--->流程结束
+                        1. 申请流程步骤：申请人提交申请--->对应仓库审核人审批--->K3管理员（林剑辉）审批--->系统授权--->流程结束
                     </p>
                     <p>
                         2. 选择了仓库之后，必须存在此仓库的审核人才能提交申请
                     </p>
                     <p>
-                        3. 如果有其它问题，请联系K3管理员：赖吉全（座机：3009；邮箱：laijiquan@trulyopto.cn）
+                        3. 如果有其它问题，请联系K3管理员：林剑辉（手机短号：6609；邮箱：linjianhui@trulyopto.cn）
                     </p>
                 </div>
             </div>
