--- a/EmpInfo/Views/Apply/CheckJQApply.cshtml
+++ b/EmpInfo/Views/Apply/CheckJQApply.cshtml
@@ -42,7 +42,7 @@
             <li><span class="glyphicon glyphicon-hand-right"></span></li>
             <li><a href="@Url.Content("~/Home/Index")">主页</a></li>
             <li><a href="@Url.Content("~/Home/WorkGroupIndex")">智慧办公集合</a></li>
-            <li><a href="ApplyIndex?billType=JQ">员工辞职/自离流程</a></li>
+            <li><a href="ApplyIndex?billType=JM">员工离职流程</a></li>
             <li class="active">查看申请单详情</li>
         </ol>
     </div>
