--- a/EmpInfo/Views/Apply/CheckMQApply.cshtml
+++ b/EmpInfo/Views/Apply/CheckMQApply.cshtml
@@ -40,11 +40,30 @@
             <li><span class="glyphicon glyphicon-hand-right"></span></li>
             <li><a href="@Url.Content("~/Home/Index")">主页</a></li>
             <li><a href="@Url.Content("~/Home/WorkGroupIndex")">智慧办公集合</a></li>
-            <li><a href="ApplyIndex?billType=MQ">计件员工辞职流程</a></li>
+            <li><a href="ApplyIndex?billType=JM">员工离职流程</a></li>
             <li class="active">查看申请单详情</li>
         </ol>
     </div>
     <div class="panel-body">
+        <div class="panel panel-default">
+            <div class="panel-body">
+                <h4 class="text-danger" style="margin-top:4px;"><i class="fa fa-info-circle"></i> 流程说明 </h4>
+                <div style="margin-left:18px;padding-top:2px;" class="text-danger">
+                    <p>
+                        1. 为维护员工辞职权利，组长和主管不能拒绝辞职申请，只能和员工面谈后选择【挽留成功】选项，并由员工确认是否撤销申请或坚持辞职。
+                    </p>
+                    <p>
+                        2. 如果审核人超过30天还未审批完成，系统在第30天会自动同意辞职。
+                    </p>
+                    <p>
+                        3. 组长填写的批准离职时间不能超过申请时间30天后，所以如果员工不想太快辞职，可等到意愿离职时间前30天再申请。
+                    </p>
+                    <p>
+                        4. 如对本流程有问题，可与行政部刘长青联系。
+                    </p>
+                </div>
+            </div>
+        </div>
             <div>
                 <div class="b-div">
                     <span class="b-label">
