--- a/EmpInfo/Views/K3/AccountReset.cshtml
+++ b/EmpInfo/Views/K3/AccountReset.cshtml
@@ -214,7 +214,7 @@
                         3. 选择了哪个账套，请填写哪个账套的登录名。因为有一些同事的K3登录名不是他本人的姓名
                     </p>
                     <p>
-                        4. 本功能只能处理自己的K3账户。如需处理其他人的K3账户，请登陆OA走流程，流程名是：K3用户重开通或重置申请
+                        4. 本功能只能处理自己的K3账户。如需处理其他人的K3账户，请在企业微信走审批流程，流程名是：K3用户重开通或重置申请
                     </p>
                     <p>
                         5. 如果提示[用户不存在]，表示当前k3账套你没有开通过用户，请走企业微信审批流程申请用户，流程名是：K3用户权限申请
@@ -223,7 +223,7 @@
                         6. 如果提示[职员信息不存在]，表示你已经开通了K3用户，但是没有职员信息，请走企业微信审批流程，流程名是：K3用户重开通或重置申请
                     </p>
                     <p>
-                        7. 如果有其它问题，请联系K3管理员：赖吉全（座机：3009；邮箱：laijiquan@trulyopto.cn）
+                        7. 如果有其它问题，请联系K3管理员：叶惠爱（座机：3589；邮箱：yehuiai@trulyopto.cn）
                     </p>
                 </div>
             </div>
