--- a/EmpInfo/Views/Report/PrintSP.cshtml
+++ b/EmpInfo/Views/Report/PrintSP.cshtml
@@ -91,7 +91,7 @@
                 <table style="width:100%;" id="itemTb">
                     <tr>
                         <td style="font-weight:bold;width:10%;">序号</td>
-                        <td style="font-weight:bold;width:30%;">产品名称</td>
+                        <td style="font-weight:bold;width:30%;">物品名称</td>
                         <td style="font-weight:bold;width:40%;">规格型号</td>
                         <td style="font-weight:bold;width:20%;">数量</td>
                     </tr>
