--- a/EmpInfo/Views/WX/DormRepairOutside.cshtml
+++ b/EmpInfo/Views/WX/DormRepairOutside.cshtml
@@ -3,7 +3,6 @@
     DormRepairBeginApplyModel dr = ViewData["infoBeforeApply"] as DormRepairBeginApplyModel; 
 }
 @section CSS{
-    <link rel="stylesheet" href="@Url.Content("~/Content/autocomplete.css")" />
     <link rel="stylesheet" href="@Url.Content("~/Content/bootstrap-datetimepicker.min.css")" />
     <link rel="stylesheet" href="@Url.Content("~/Content/webupload/webuploader.css")" />
 
@@ -58,85 +57,42 @@
             });
         });
 
-        function RoomMale(dmString) {
-            this.cardNumber = dmString.split(":")[0];
-            this.name = dmString.split(":")[1];
-        }
+        
 
         function DormRepairModel() {
             var self = this;
-            self.areaName = "@dr.areaName";
-            self.dormNumber = "@dr.dormNumber";
+            self.areaNames = ["一区", "二区", "六区"];
+            self.areaName = ko.observable("");
+            self.dormNumber = ko.observable("");
             self.phoneNumber = ko.observable("");
             self.shortPhoneNumber = ko.observable("");
             self.contactName = ko.observable("");
-            //self.roomMates = ko.observableArray([]);
             self.repairTypes = ["直接维修", "预约维修"];
-            self.feeShareTypes = ko.observableArray(["户主本人", "舍友分摊"]);
             self.repairType = ko.observable("");
-            self.contactTypes = ["户主", "其他"];
-            self.contactType = ko.observable();
-            self.feeShareType = ko.observable("");
-            self.checkedRoomMates = ko.observable([]);
-            self.ownerName = "@dr.contactName";
-            self.ownerPhone = "@dr.phoneNumber";
-            self.ownerShortPhone = "@dr.shortPhoneNumber";
             self.repairTime = "";
             self.repairContent = ko.observable("");
-
-            self.roomMates = ko.pureComputed(function () {
-                var roomMaleArr = "@dr.roomMaleList".split(";");
-                var result = [];
-                for (var i = 0; i < roomMaleArr.length; i++) {
-                    if (roomMaleArr[i] != "") {
-                        result.push(new RoomMale(roomMaleArr[i]));
-                    }
-                }
-                return result;
-            });            
-
 
             //修改维修类型
             self.ChangeRepairType = function (r) {
                 self.repairType(r);
             }
 
-            //修改分摊类型
-            self.ChangeFeeShareType = function (f) {
-                self.feeShareType(f);
-                //self.roomMates(self.roomMates());//必须加上这句通知dom，否则dom没变化
-            }
-
-            //修改联系人
-            self.ChangeContactType = function (c) {
-                self.contactType(c);
-                if (c == "户主") {
-                    self.contactName(self.ownerName);
-                    self.phoneNumber(self.ownerPhone);
-                    self.shortPhoneNumber(self.ownerShortPhone);
-                } else {
-                    self.contactName("");
-                    self.phoneNumber("");
-                    self.shortPhoneNumber("");
-                }
-            }
-
             //提交申请
             self.submitApply = function () {
+                if (self.areaName() == "") {
+                    toastr.error("请选择住宿区");
+                    return;
+                }
+                if (self.dormNumber() == "") {
+                    toastr.error("请输入宿舍号");
+                    return;
+                }
                 if (self.repairType() == "") {
                     toastr.error("请选择维修类型");
                     return;
                 }
                 if (self.repairType() == "预约维修" && self.repairTime == "") {
                     toastr.error("请选择预约时间");
-                    return;
-                }
-                if (self.feeShareType() == "") {
-                    toastr.error("请选择费用承担方式");
-                    return;
-                }
-                if (self.feeShareType() == "舍友分摊" && self.checkedRoomMates().length == 0) {
-                    toastr.error("请勾选需要分摊费用的舍友");
                     return;
                 }
                 if (self.contactName() == "") {
@@ -147,20 +103,16 @@
                     toastr.error("手机号和短号至少必须填写一个");
                     return;
                 }
-                if (self.repairContent() == "") {
-                    toastr.error("请填写维修内容");
-                    return;
-                }
 
                 $("#applyBt").button("loading");
-                $.post("SaveApply", {
+                $.post("BeginApplyDPOutside", {
                     sys_no:"@dr.sysNo",
                     area_name: self.areaName,
                     dorm_num: self.dormNumber,
                     repair_type: self.repairType(),
                     repair_time: self.repairTime,
-                    fee_share_type: self.feeShareType(),
-                    fee_share_peple: self.checkedRoomMates().join(";"),
+                    fee_share_type: "户主本人",
+                    fee_share_peple: "",
                     contact_name: self.contactName(), 
                     contact_phone: self.phoneNumber(),
                     contact_short_phone: self.shortPhoneNumber(),
@@ -169,7 +121,7 @@
                     $("#applyBt").button("reset");
                     if (data.suc) {
                         toastr.success("提交成功:" + data.msg);
-                        setTimeout(function () { window.location.href = "ApplyIndex?billType=DP"; }, 2000);
+                        setTimeout(function () { window.location.href = "../Apply/CheckDPApplyInDormSys?sysNo=@dr.sysNo"; }, 1000);
                     } else {
                         toastr.error(data.msg);
                     }
@@ -183,27 +135,26 @@
 }
 <div class="row" style="margin-left:0;margin-right:0;">
     <div class="col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2 col-xs-12" style="padding-left:0;padding-right:0;">
-        <div class="panel panel-success">
+        <div class="panel panel-primary">
             <div class="panel-heading">
-                <ol class="breadcrumb" style="margin:0;padding:0; background-color:transparent;">
-                    <li><span class="glyphicon glyphicon-hand-right"></span></li>
-                    <li><a href="@Url.Content("~/Home/Index")">主页</a></li>
-                    <li><a href="@Url.Content("~/Home/DormGroupIndex")">后勤事务</a></li>
-                    <li class="active">宿舍维修申请</li>
-                </ol>
+                厂外人员宿舍维修单
             </div>
             <div class="panel-body">
                 <div class="b-div">
                     <span class="b-label">
                         区号：
                     </span>
-                    <span data-bind="text:areaName" />
+                    <span style="display:inline-block;width:70%;">
+                        <select class="form-control" data-bind="options:areaNames,selectedOptions:areaName,optionsCaption:'请选择宿舍区'"></select>
+                    </span>
                 </div>
                 <div class="b-div">
                     <span class="b-label">
                         宿舍号：
                     </span>
-                    <span data-bind="text:dormNumber" />
+                    <span style="display:inline-block;width:70%;">
+                        <input type="text" class="form-control" data-bind="value:dormNumber" placeholder="请填写宿舍号" />
+                    </span>
                 </div>
                 <div class="b-div">
                     <span class="b-label">
@@ -226,57 +177,27 @@
                     </span>
                 </div>
                 <div class="b-div">
-                    <span class="b-label">
-                        费用承担：
-                    </span>
-                    <!--ko foreach: feeShareTypes-->
-                    <button class="btn btn-sm btn-default" data-bind="css:{'btn-danger':$parent.feeShareType()==$data},click:$parent.ChangeFeeShareType" style="margin-right:12px;">
-                        <span data-bind="text:$data"></span>
-                        <i class="fa fa-check-circle" data-bind="visible:$parent.feeShareType()==$data"></i>
-                    </button>
-                    <!--/ko-->
-                </div>
-                <div class="b-div" data-bind="visible:feeShareType()=='舍友分摊'">
-                    <span class="b-label">
-                        选择舍友：
-                    </span>
-                    <!--ko foreach: roomMates-->
-                    <input type="checkbox" data-bind="value:$data.cardNumber,checked:$parent.checkedRoomMates" /><span data-bind="text:$data.name"></span>&nbsp;
-                    <!--/ko-->
-                </div>
-                <div class="b-div">
-                    <span class="b-label">
-                        联系信息：
-                    </span>
-                    <!--ko foreach: contactTypes-->
-                    <button class="btn btn-sm btn-default" data-bind="css:{'btn-info':$parent.contactType()==$data},click:$parent.ChangeContactType" style="margin-right:12px;">
-                        <span data-bind="text:$data"></span>
-                        <i class="fa fa-check-circle" data-bind="visible:$parent.contactType()==$data"></i>
-                    </button>
-                    <!--/ko-->
-                </div>
-                <div class="b-div">
                     <span class="b-label">联系人：</span>
                     <span style="display:inline-block;width:70%;">
-                        <input type="text" class="form-control" data-bind="value:contactName" />
+                        <input type="text" class="form-control" data-bind="value:contactName" placeholder="联系人必须是后勤部登记的在住人员姓名" autocomplete="off"/>
                     </span>
                 </div>
                 <div class="b-div">
                     <span class="b-label">手机号码：</span>
                     <span style="display:inline-block;width:70%;">
-                        <input type="text" class="form-control" data-bind="value:phoneNumber" />
+                        <input type="text" class="form-control" data-bind="value:phoneNumber" placeholder="请填写手机号码"/>
                     </span>
                 </div>
                 <div class="b-div">
                     <span class="b-label">手机短号：</span>
                     <span style="display:inline-block;width:70%;">
-                        <input type="text" class="form-control" data-bind="value:shortPhoneNumber" />
+                        <input type="text" class="form-control" data-bind="value:shortPhoneNumber" placeholder="有信利短号的，请填写；否则不用填写"/>
                     </span>
                 </div>
                 <div class="b-div">
                     <span class="b-label">维修内容：</span>
                     <span style="display:inline-block;width:70%;">
-                        <textarea class="form-control" rows="3" data-bind="value:repairContent"></textarea>
+                        <textarea class="form-control" rows="3" data-bind="value:repairContent" placeholder="请填写需要维修的物品"></textarea>
                     </span>
                 </div>
                 <div style="display:inline-block;">
@@ -295,22 +216,22 @@
                 <h4 class="text-danger"><i class="fa fa-info-circle"></i> 功能说明 </h4>
                 <div style="margin-left:18px;padding-top:6px;" class="text-danger">
                     <p>
-                        1. 流程步骤：开始--->员工申请宿舍维修--->舍友确认（如没有舍友分摊，则跳过此步骤）--->后勤受理人接单--->维修完成--->申请人确认评价--->结束。
+                        1. 流程步骤：开始--->厂外人员申请宿舍维修--->后勤受理人接单--->维修完成--->申请人确认评价--->结束。
                     </p>
                     <p>
-                        2. 维修单一旦确认完成之后，再次发生维修事宜均属于有偿服务，费用另外计算。
+                        2. 产生的维修费用由本人和舍友（如果是多人宿舍）共同分摊，7天内新入住的人员不用分摊维修费用。
                     </p>
                     <p>
-                        3. 对本次服务不确认评价，将不能再次申请维修，请配合给予评价。
+                        3. 维修完成后，产生的维修配件费用将在本月的住宿费用中扣除；维修单一旦确认完成之后，再次发生维修事宜均属于有偿服务，费用另外计算。
                     </p>
                     <p>
-                        4. 维修工接单时间起24小时内完成维修，如遇节假日及特殊维修，将延期。
+                        4. 对本次服务不确认评价，将不能再次申请维修，请配合给予评价。
+                    </p>
+                    <p>
+                        5. 维修工接单时间起24小时内完成维修，如遇节假日及特殊维修，将延期。
                     </p>
                     <p>
                         5. 后勤部联系电话：0660-3380021
-                    </p>
-                    <p>
-                        6. 详细操作指引，<a href="@Url.Content("~/Content/doc/宿舍维修申请流程操作指引.pdf")" target="_blank">点此查看下载</a> 。
                     </p>
                 </div>
             </div>
